# partydeck

./: .gitmodules  Cargo.toml  README.md  build.sh  build_deps.sh
src/: input.rs  launch.rs  monitor.rs
src/app/: app.rs  app_pages.rs  app_panels.rs  config.rs
